--- a/css/mycss.css
+++ b/css/mycss.css
@@ -165,7 +165,8 @@ body{
   width: 100%;
   text-align: center;
   color: #fff;
-  line-height: 60px; 
+  line-height: 60px;
+  margin-top: 30px;
     
 /*    border-top:3px solid #00f;*/
   
