--- a/css/mycss.css
+++ b/css/mycss.css
@@ -64,9 +64,7 @@
 }
 
 
-#header {
-	height:;
-}
+
 
 body{
     background-color: rgba(28,25,44,.1);
@@ -194,6 +192,8 @@ body{
 }
 
 
+
+
 /*media queries*/
 
 @media only screen and (min-width: 200px) and (max-width: 350px){ 
@@ -210,6 +210,20 @@ body{
         
 
 }
+    #header-banner{
+        height: 200px;
+        background-color: #b38ed5;
+        padding: 0;
+        width: 100%;
+        background-image: url("../images/bg.fw.png");
+        background-repeat:no-repeat;
+        background-size: cover;
+        background-position:center center;
+        overflow: hidden;
+
+        /*    box-shadow: 2px 2px 2px #000;*/
+
+    }
 #typed{
     color: #fff;
     background-color: rgba(0,0,0,0.8);
@@ -250,6 +264,20 @@ body{
         
 
 }
+    #header-banner{
+        height: 200px;
+        background-color: #b38ed5;
+        padding: 0;
+        /*width: 100%;*/
+        background-image: url("../images/bg.fw.png");
+        background-repeat:no-repeat;
+        background-size: cover;
+        background-position:center;
+        overflow: hidden;
+
+        /*    box-shadow: 2px 2px 2px #000;*/
+
+    }
 #typed{
 
     color: #fff;
@@ -363,162 +391,31 @@ body{
     
     font-size: 36px;
         
-} }
-
-
-/*
-
-
-@media screen and (max-width: 300px){
-    
-
-    #floating-img {
-	position: absolute;
-	
-	left: 10%;
-    top: 60px;
-    height: 200px;
-    width: 200px;
-     
-    
-    }
-    
-    #typed{
-    color: #fff;
-    background-color: rgba(0,0,0,0.8);
-    height: 170px;
-    width: 450px;
-    margin-top: 300px;
-    margin-left: 5px;
-    margin-right: 10px;
-    border-radius: 20px;
-    font-family: 'Passion one',monospace, cursive;
-    font-size: 15px;
-        padding-top: 20px;
-        
+}
 }
 
 
 
-
-}
-    @media screen and (min-width: 301px) and (max-width: 450px){
-    
-    #floating-img {
-	position: absolute;
-	
-	left: 10%;
-    top: 70px;
-    height: 200px;
-    width: 200px;
-    
-    border-radius: 100%;
-        
-
-}
-#typed{
-    color: #fff;
-    background-color: rgba(0,0,0,0.8);
-    height: 170px;
-    width: 250px;
-    margin-top: 300px;
-    margin-left: 30px;
-    margin-right: 10px;
-    border-radius: 20px;
-    font-family: 'Passion one',monospace, cursive;
-    font-size: 16px;
-        
-}
-    
-}
-
-@media screen and (min-width: 460px) and (max-width: 766px){
-    
-    #floating-img {
-	position: absolute;
-	
-	left: 40%;
-    top: 300px;
-    height: 300px;
-    width: 300px;
-    
-    border-radius: 100%;
-
-}
-    #typed{
-    color: #fff;
-    background-color: rgba(0,0,0,0.8);
-    height: 170px;
-    width: 450px;
-    margin-top: 100px;
-    margin-left: 30px;
-    margin-right: 10px;
-    border-radius: 20px;
-    font-family: 'Passion one',monospace, cursive;
-    font-size: 20px;
-        
-}
-
-    
-}
-
-@media screen and (min-width: 767px) and (max-width: 1024px){
-    
-    #floating-img {
-	position: absolute;
-	
-	left: 50%;
-    top: 250px;
-    height: 300px;
-    width: 300px;
-     
-    border-radius: 100%;
-
-}
-    
-    #typed{
-    color: #fff;
-    background-color: rgba(0,0,0,0.8);
-    height: 200px;
-    width: 450px;
-    margin-top: 100px;
-    margin-left: 30px;
-    margin-right: 10px;
-    border-radius: 20px;
-    font-family: 'Passion one',monospace, cursive;
-    font-size: 25px;
-        
-}
-
-    
-}
-
-@media screen and (min-width: 1025px) and (max-width: 3024px){
-    
-    #floating-img {
-	position: absolute;
-	
-	left: 60%;
-    top: 160px;
-    height: 400px;
-    width: 400px;
-     
-    border-radius: 100%;
-
-}
-    
-}
-*/
 
 #header-banner{
- height: 500px;
+ height: 600px;
     background-color: #b38ed5;
-    width: 100%;
-    background-image:  url(https://raw.githubusercontent.com/emasys/portfolio/master/images/wallup-416297.jpg);
+    padding: 0;
+    /*width: 100%;*/
+    background-image: url("../images/bg.fw.png");
+    background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    overflow: hidden;
     
 /*    box-shadow: 2px 2px 2px #000;*/
      
+}
+#header-banner img{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
 }
 
 .strokeme
@@ -549,9 +446,10 @@ body{
 /*    margin: 0 auto;*/
 /*    width: 40%;*/
 /*    word-spacing: 1em;*/
-    background-color: #b38ed5;
+    border: 0 solid transparent;
+    background-color: transparent;
 	text-align:center;
-    font-family: 'Passion One', Verdana;
+    font-family: 'Pacifico', cursive;
     font-size: 28px;
 /*    padding-left: 160px;*/
 
@@ -621,7 +519,7 @@ body{
 #dsp{
 	display: block;
 	height: 50px;
-	width:;
+	/*width:;*/
 	/*margin-bottom:10px;*/
 	border: 1px solid #fff;
 	border-radius:4px;
@@ -658,7 +556,7 @@ body{
 		margin: 0;
 		color:#fff !important;
 		overflow:hidden;
-		background-image:url(images/overview.fw.png);
+		/*background-image:url(images/overview.fw.png);*/
 		background-size: cover;
 		height:500px;
 		width:auto;
@@ -687,7 +585,7 @@ body{
 		border-radius: 20px;
 		width: 100%;
 		
-		web-kit-box:;
+		/*web-kit-box:;*/
 		
 		box-shadow: 3px 3px 3px #333; 
 	}
