--- a/css/agency.css
+++ b/css/agency.css
@@ -254,6 +254,7 @@ header.masthead {
       font-size: 35px;
       font-weight: 700;
       line-height: 35px;
+        height: 70px;
       margin-bottom: 25px;
       font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
       /*text-transform: uppercase; */
@@ -276,6 +277,7 @@ header.masthead {
       font-weight: 700;
       line-height: 40px;
       margin-bottom: 50px;
+        height: 80px;
       font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
       /*text-transform: uppercase; */
     } }
