--- a/css/agency.css
+++ b/css/agency.css
@@ -4,6 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-agency/blob/master/LICENSE)
  */
 body {
+
   overflow-x: hidden;
   font-family: 'Roboto Slab', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 
@@ -35,6 +36,7 @@ h6 {
     transform(translateY(-15px));
 }
 }
+
 
 
 .downArrow{
@@ -744,3 +746,101 @@ ul.social-buttons {
     80% { width: 0px;}
     100%{ width:100%;}
 }
+
+.sectionBox{
+    /*background-color: rgba(68, 68, 68, 0.38);*/
+    margin: 10px;
+    border-top: 2px solid #e6e6e6;
+    -webkit-box-shadow: 0px 10px 34px -7px rgba(0,0,0,0.72);
+    -moz-box-shadow: 0px 10px 34px -7px rgba(0,0,0,0.72);
+    box-shadow: 0px 10px 34px -7px rgba(0,0,0,0.72);    /*transform: scale(-1);*/
+    border-radius: 10px;
+    -webkit-animation: 1s 1s;
+    -o-animation: 1s 1s;
+    animation: 1s 1s;
+}
+
+.sectionAbout{
+    margin: 20px 10px 10px 10px;
+    border-top: 2px solid #e6e6e6;
+    -webkit-box-shadow: 0px 10px 34px -7px rgba(0,0,0,0.72);
+    -moz-box-shadow: 0px 10px 34px -7px rgba(0,0,0,0.72);
+    box-shadow: 0px 10px 34px -7px rgba(0,0,0,0.72);    /*transform: scale(-1);*/
+    border-radius: 10px;
+}
+
+#one #two #three #four #five #six{
+    -webkit-animation: 5s 5s;
+    -o-animation: 5s 5s;
+    animation: 5s 5s;
+}
+
+
+
+.jelly {
+    -webkit-animation: animation 1000ms linear both;
+    animation: animation 1000ms linear both;
+}
+
+/* Generated with Bounce.js. Edit at https://goo.gl/AY40hC */
+
+@-webkit-keyframes animation {
+    0% { -webkit-transform: matrix3d(2, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(2, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    3.4% { -webkit-transform: matrix3d(1.684, 0, 0, 0, 0, 1.593, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.684, 0, 0, 0, 0, 1.593, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    4.7% { -webkit-transform: matrix3d(1.55, 0, 0, 0, 0, 1.401, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.55, 0, 0, 0, 0, 1.401, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    6.81% { -webkit-transform: matrix3d(1.341, 0, 0, 0, 0, 1.107, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.341, 0, 0, 0, 0, 1.107, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    9.41% { -webkit-transform: matrix3d(1.117, 0, 0, 0, 0, 0.832, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.117, 0, 0, 0, 0, 0.832, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    10.21% { -webkit-transform: matrix3d(1.058, 0, 0, 0, 0, 0.774, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.058, 0, 0, 0, 0, 0.774, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    13.61% { -webkit-transform: matrix3d(0.877, 0, 0, 0, 0, 0.668, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.877, 0, 0, 0, 0, 0.668, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    14.11% { -webkit-transform: matrix3d(0.859, 0, 0, 0, 0, 0.669, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.859, 0, 0, 0, 0, 0.669, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    17.52% { -webkit-transform: matrix3d(0.792, 0, 0, 0, 0, 0.761, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.792, 0, 0, 0, 0, 0.761, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    18.72% { -webkit-transform: matrix3d(0.788, 0, 0, 0, 0, 0.813, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.788, 0, 0, 0, 0, 0.813, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    21.32% { -webkit-transform: matrix3d(0.804, 0, 0, 0, 0, 0.931, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.804, 0, 0, 0, 0, 0.931, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    24.32% { -webkit-transform: matrix3d(0.849, 0, 0, 0, 0, 1.04, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.849, 0, 0, 0, 0, 1.04, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    25.23% { -webkit-transform: matrix3d(0.866, 0, 0, 0, 0, 1.062, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.866, 0, 0, 0, 0, 1.062, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    29.03% { -webkit-transform: matrix3d(0.937, 0, 0, 0, 0, 1.103, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.937, 0, 0, 0, 0, 1.103, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    29.93% { -webkit-transform: matrix3d(0.952, 0, 0, 0, 0, 1.101, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.952, 0, 0, 0, 0, 1.101, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    35.54% { -webkit-transform: matrix3d(1.021, 0, 0, 0, 0, 1.038, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.021, 0, 0, 0, 0, 1.038, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    36.74% { -webkit-transform: matrix3d(1.028, 0, 0, 0, 0, 1.021, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.028, 0, 0, 0, 0, 1.021, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    41.04% { -webkit-transform: matrix3d(1.039, 0, 0, 0, 0, 0.978, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.039, 0, 0, 0, 0, 0.978, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    44.44% { -webkit-transform: matrix3d(1.034, 0, 0, 0, 0, 0.968, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.034, 0, 0, 0, 0, 0.968, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    52.15% { -webkit-transform: matrix3d(1.009, 0, 0, 0, 0, 0.994, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.009, 0, 0, 0, 0, 0.994, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    59.86% { -webkit-transform: matrix3d(0.994, 0, 0, 0, 0, 1.01, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.994, 0, 0, 0, 0, 1.01, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    63.26% { -webkit-transform: matrix3d(0.993, 0, 0, 0, 0, 1.008, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.993, 0, 0, 0, 0, 1.008, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    75.28% { -webkit-transform: matrix3d(0.999, 0, 0, 0, 0, 0.997, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.999, 0, 0, 0, 0, 0.997, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    85.49% { -webkit-transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    90.69% { -webkit-transform: matrix3d(1.001, 0, 0, 0, 0, 1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.001, 0, 0, 0, 0, 1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+}
+
+@keyframes animation {
+    0% { -webkit-transform: matrix3d(2, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(2, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    3.4% { -webkit-transform: matrix3d(1.684, 0, 0, 0, 0, 1.593, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.684, 0, 0, 0, 0, 1.593, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    4.7% { -webkit-transform: matrix3d(1.55, 0, 0, 0, 0, 1.401, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.55, 0, 0, 0, 0, 1.401, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    6.81% { -webkit-transform: matrix3d(1.341, 0, 0, 0, 0, 1.107, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.341, 0, 0, 0, 0, 1.107, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    9.41% { -webkit-transform: matrix3d(1.117, 0, 0, 0, 0, 0.832, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.117, 0, 0, 0, 0, 0.832, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    10.21% { -webkit-transform: matrix3d(1.058, 0, 0, 0, 0, 0.774, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.058, 0, 0, 0, 0, 0.774, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    13.61% { -webkit-transform: matrix3d(0.877, 0, 0, 0, 0, 0.668, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.877, 0, 0, 0, 0, 0.668, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    14.11% { -webkit-transform: matrix3d(0.859, 0, 0, 0, 0, 0.669, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.859, 0, 0, 0, 0, 0.669, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    17.52% { -webkit-transform: matrix3d(0.792, 0, 0, 0, 0, 0.761, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.792, 0, 0, 0, 0, 0.761, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    18.72% { -webkit-transform: matrix3d(0.788, 0, 0, 0, 0, 0.813, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.788, 0, 0, 0, 0, 0.813, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    21.32% { -webkit-transform: matrix3d(0.804, 0, 0, 0, 0, 0.931, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.804, 0, 0, 0, 0, 0.931, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    24.32% { -webkit-transform: matrix3d(0.849, 0, 0, 0, 0, 1.04, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.849, 0, 0, 0, 0, 1.04, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    25.23% { -webkit-transform: matrix3d(0.866, 0, 0, 0, 0, 1.062, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.866, 0, 0, 0, 0, 1.062, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    29.03% { -webkit-transform: matrix3d(0.937, 0, 0, 0, 0, 1.103, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.937, 0, 0, 0, 0, 1.103, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    29.93% { -webkit-transform: matrix3d(0.952, 0, 0, 0, 0, 1.101, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.952, 0, 0, 0, 0, 1.101, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    35.54% { -webkit-transform: matrix3d(1.021, 0, 0, 0, 0, 1.038, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.021, 0, 0, 0, 0, 1.038, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    36.74% { -webkit-transform: matrix3d(1.028, 0, 0, 0, 0, 1.021, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.028, 0, 0, 0, 0, 1.021, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    41.04% { -webkit-transform: matrix3d(1.039, 0, 0, 0, 0, 0.978, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.039, 0, 0, 0, 0, 0.978, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    44.44% { -webkit-transform: matrix3d(1.034, 0, 0, 0, 0, 0.968, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.034, 0, 0, 0, 0, 0.968, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    52.15% { -webkit-transform: matrix3d(1.009, 0, 0, 0, 0, 0.994, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.009, 0, 0, 0, 0, 0.994, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    59.86% { -webkit-transform: matrix3d(0.994, 0, 0, 0, 0, 1.01, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.994, 0, 0, 0, 0, 1.01, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    63.26% { -webkit-transform: matrix3d(0.993, 0, 0, 0, 0, 1.008, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.993, 0, 0, 0, 0, 1.008, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    75.28% { -webkit-transform: matrix3d(0.999, 0, 0, 0, 0, 0.997, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.999, 0, 0, 0, 0, 0.997, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    85.49% { -webkit-transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    90.69% { -webkit-transform: matrix3d(1.001, 0, 0, 0, 0, 1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.001, 0, 0, 0, 0, 1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+    100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+}
+
+
+
