--- a/RandomQuotes/css/styles.css
+++ b/RandomQuotes/css/styles.css
@@ -6,12 +6,17 @@
     transition: ease-in 400ms;
 }
 
+body {
+    background: url('../images/bgimg.fw.png') no-repeat center center;
+    background-size: cover;
+}
+
 .quote-wrapper {
     max-width: 400px;
     height: auto;
     background-color: #191f25;
     margin: 20px auto;
-    border-radius: 0 0 0 20px;
+    border-radius: 20px;
     position: relative;
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
     overflow: hidden;
