--- a/ticgame/css/style.css
+++ b/ticgame/css/style.css
@@ -1,9 +1,11 @@
-body{
-    background-color: #444;
+body {
+    background: url('../images/bgimg.fw.png') no-repeat center center;
+    background-size: cover;
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
     font-size: 12px;
 }
+
 .container {
     max-width: 260px;
     margin: 2em auto;
@@ -12,7 +14,7 @@ body{
     border-radius: 20px 20px 0 0;
 }
 
-header{
+header {
     width: 100%;
     height: 146px;
     background-image: url('../images/header1.jpg');
@@ -22,7 +24,7 @@ header{
     border-radius: 20px 20px 0 0;
 }
 
-.ribbon{
+.ribbon {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,7 +37,7 @@ header{
     margin-bottom: 5px;
 }
 
-.wrapper{
+.wrapper {
     margin-top: 5px;
     margin-bottom: 5px;
     display: flex;
@@ -44,7 +46,8 @@ header{
     width: 100%;
     height: auto;
 }
-.victory{
+
+.victory {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,7 +60,8 @@ header{
     background-color: #AC8953;
     font-family: 'Lobster', cursive;
 }
-.footer{
+
+.footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,7 +72,8 @@ header{
     background-color: #AC8953;
     font-family: 'Lobster', cursive;
 }
-.control{
+
+.control {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,12 +89,11 @@ header{
     box-shadow: 0 3px 3px black;
 }
 
-.control:active{
+.control:active {
     margin-top: 1px;
     box-shadow: 0 0 0 black;
     margin-bottom: 9px;
 }
-
 
 a {
     text-decoration: none;
@@ -121,18 +125,11 @@ a {
     -ms-transition: ease 400ms;
     -o-transition: ease 400ms;
     transition: ease 400ms;
-    box-shadow:
-        inset 0 2px 3px rgba(255,255,255,0.3),
-        inset 0 -2px 3px rgba(0,0,0,0.3),
-        0 1px 1px rgba(255,255,255,0.9);
+    box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3), inset 0 -2px 3px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(255, 255, 255, 0.9);
 }
 
-.free {
-}
+.free {}
 
+.O-play {}
 
-.O-play {
-}
-
-.X-play {
-}
+.X-play {}
