--- a/twitchTv/css/styles.css
+++ b/twitchTv/css/styles.css
@@ -1,62 +1,64 @@
-/*
- * Globals
- */
-
 /* Links */
+
 a,
 a:focus,
 a:hover {
     color: #fff;
 }
 
+
 /* Custom default button */
+
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
     color: #333;
-    text-shadow: none; /* Prevent inheritance from `body` */
+    text-shadow: none;
+    /* Prevent inheritance from `body` */
     background-color: #fff;
     border: .05rem solid #fff;
 }
 
-
-
-
-/*
- * Base structure
- */
-
 html,
 body {
-    height: 700px;
     background-color: #333;
 }
+
 body {
+    background: url('../images/bgimg.fw.png') no-repeat center center;
+    background-size: cover;
     color: #fff;
     text-align: center;
-    text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
 }
 
+
 /* Extra markup and styles for table-esque vertical and horizontal centering */
+
 .site-wrapper {
     display: table;
     width: 100%;
-    height: 700px; /* For at least Firefox */
+    height: 700px;
+    /* For at least Firefox */
     min-height: 700px;
-    -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
-    box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
+    -webkit-box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
+
 .site-wrapper-inner {
     display: table-cell;
     /*vertical-align: top;*/
     vertical-align: middle;
 }
+
 .cover-container {
     margin-right: auto;
     margin-left: auto;
 }
 
+
 /* Padding for spacing */
+
 .inner {
     padding: 2rem;
 }
@@ -78,19 +80,20 @@ body {
 .nav-masthead .nav-link {
     padding: .25rem 0;
     font-weight: bold;
-    color: rgba(255,255,255,.5);
+    color: rgba(255, 255, 255, .5);
     background-color: transparent;
     border-bottom: .25rem solid transparent;
 }
 
-.nav-masthead .nav-link:hover{
-    border-bottom-color: rgba(255,255,255,.25);
-}
-.nav-masthead .nav-link:focus {
-    border-bottom-color: rgba(255,255,255,1);
+.nav-masthead .nav-link:hover {
+    border-bottom-color: rgba(255, 255, 255, .25);
 }
 
-.nav-masthead .nav-link + .nav-link {
+.nav-masthead .nav-link:focus {
+    border-bottom-color: rgba(255, 255, 255, 1);
+}
+
+.nav-masthead .nav-link+.nav-link {
     margin-left: 1rem;
 }
 
@@ -128,6 +131,7 @@ body {
     /*margin-top: 200px;*/
     z-index: 1;
 }
+
 .cover .btn-lg {
     padding: .75rem 1.25rem;
     font-weight: bold;
@@ -139,7 +143,7 @@ body {
  */
 
 .mastfoot {
-    color: rgba(255,255,255,.5);
+    color: rgba(255, 255, 255, .5);
 }
 
 
@@ -161,16 +165,13 @@ body {
     .site-wrapper-inner {
         vertical-align: middle;
     }
-
-
     /* Handle the widths */
     .masthead,
     .mastfoot,
     .cover-container {
-        width: 100%; /* Must be percentage or pixels for horizontal alignment */
+        width: 100%;
+        /* Must be percentage or pixels for horizontal alignment */
     }
-
-
 }
 
 @media (min-width: 62em) {
@@ -179,52 +180,53 @@ body {
     .cover-container {
         width: 42rem;
     }
-
 }
 
 
 /*card design*/
-.card{
+
+.card {
     height: auto;
     width: 100%;
     padding: 8px;
 }
 
-.iconize{
+.iconize {
     height: 80px;
     width: 80px;
     float: left;
     border-radius: 100%;
 }
-.boxify{
+
+.boxify {
     height: 80px;
     width: 80px;
     float: right;
 }
 
-.iconize-container{
+.iconize-container {
     float: left;
     height: 100px;
     width: 80px;
     background-color: #000000;
 }
 
-.card-lines{
+.card-lines {}
 
-}
-.cardText{
+.cardText {
     color: #000;
     font-size: 12px;
     margin-top: 2px;
 }
 
-.cardText a, .cardText a:focus,
+.cardText a,
+.cardText a:focus,
 .cardText a:hover {
     color: #000000;
     font-weight: bolder;
 }
 
-.online{
+.online {
     border: 2px solid green;
     display: inline;
     color: green;
@@ -232,7 +234,8 @@ body {
     padding: 1px 4px 4px 4px;
     margin-top: 10px;
 }
-.offline{
+
+.offline {
     border: 2px solid red;
     display: inline;
     color: red;
@@ -240,13 +243,12 @@ body {
     padding: 1px 4px 4px 4px;
     margin-top: 10px;
 }
-.status{
+
+.status {
     display: inline;
     border-radius: 50px;
     padding: 1px 4px 4px 4px;
     margin-top: 10px;
 }
 
-.logo{
-
-}
+.logo {}
