--- a/wikipediaViewer/styles.css
+++ b/wikipediaViewer/styles.css
@@ -3,91 +3,87 @@ a:focus,
 a:hover {
     color: #a4b9a5;
 }
+
 html,
 body {
     height: 100%;
-    background-color: #333;
+    background-color: #444;
     color: #fff;
-    text-shadow: 0 1px 3px rgba(0,0,0,.5);
+    text-shadow: 0 1px 3px rgba(0, 0, 0, .5);
 }
+
 .beautify-box {
     padding: 15px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
-.beautify-box:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-.site-wrapper {
 
+.beautify-box:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.site-wrapper {
     background-size: cover;
     width: 100%;
     background-repeat: no-repeat;
-    height: auto; /* For at least Firefox */
+    height: auto;
     min-height: 100%;
-    -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-    box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+    -webkit-box-shadow: inset 0 0 100px rgba(0, 0, 0, .5);
+    box-shadow: inset 0 0 100px rgba(0, 0, 0, .5);
 }
-img{
 
+img {
     width: 200px;
     height: 190px;
     margin-bottom: 30px;
 }
 
-#result{
+#result {
     width: 400px;
     text-align: left;
     height: auto;
     margin: 0 auto;
 }
 
-@media (max-width: 480px){
+@media (max-width: 480px) {
     /* styles for mobile browsers smaller than 480px; (iPhone) */
-    #result{
+    #result {
         width: 200px;
         height: auto;
         margin: 0 auto;
-
     }
-
-    h2{
+    h2 {
         font-size: 16px;
         font-weight: bolder;
     }
-    p{
+    p {
         font-size: 12px;
     }
-
-    img{
-
+    img {
         width: 80px;
         height: 70px;
         margin-bottom: 30px;
     }
-
-    .header{
+    .header {
         margin: 90px auto;
         width: 100%;
         text-align: center;
         clear: both;
     }
-
-    #borders{
+    #borders {
         border: 2px solid #ffffff;
         display: inline;
         border-radius: 50px;
         padding: 5px 10px;
         margin: 0;
     }
-
 }
 
-.searchBar{
+.searchBar {
     margin: 15px;
 }
 
-#borders{
+#borders {
     border: 2px solid #ffffff;
     display: inline;
     border-radius: 50px;
@@ -95,16 +91,18 @@ img{
     margin: 0;
 }
 
-#marginn{
-    margin-top: 0 ;
+#marginn {
+    margin-top: 0;
     padding: 0;
 }
-.header{
+
+.header {
     margin: 90px auto;
     width: 100%;
     text-align: center;
     clear: both;
 }
+
 button {
     display: inline-block;
     margin-top: 10px;
@@ -115,9 +113,11 @@ button {
     box-shadow: none;
     border-radius: 0;
 }
+
 button:focus {
     outline: none
 }
+
 .searchBar button {
     color: #fff;
     background-color: #444;
@@ -129,25 +129,27 @@ button:focus {
 
 .searchBar button:hover,
 .searchBar button.hover {
-    box-shadow: inset 0 0 0 1px #ffffff,0 5px 15px #3c3f41;
+    box-shadow: inset 0 0 0 1px #ffffff, 0 5px 15px #3c3f41;
+    color: #444;
+    background-color: #ffffff;
+    -webkit-transition: ease-in 500ms;
+    -moz-transition: ease-in 500ms;
+    transition: ease-in 500ms;
 }
 
 .searchBar button:active,
 .searchBar button.active {
-    box-shadow: inset 0 0 0 1px #3c3f41,inset 0 5px 30px #000000;
+    box-shadow: inset 0 0 0 1px #3c3f41, inset 0 5px 30px #000000;
 }
 
-#search {
-
-}
-
+#search {}
 
 #search input[type="text"] {
     background: url(images/search-white.png) no-repeat 10px 6px #444;
     border: 0 none;
-    font: bold 12px Arial,Helvetica,Sans-serif;
+    font: bold 12px Arial, Helvetica, Sans-serif;
     color: #d7d7d7;
-    width:150px;
+    width: 150px;
     padding: 6px 15px 6px 35px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
@@ -165,22 +167,11 @@ button:focus {
 #search input[type="text"]:focus {
     background: url(images/search-dark.png) no-repeat 10px 6px #fcfcfc;
     color: #6a6f75;
-    outline:none;
-    box-shadow:none;
+    outline: none;
+    box-shadow: none;
     width: 200px;
     -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
     -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
     text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
 }
-
-
-
-
-
-
-
-
-
-
-
