--- a/weatherApp/css/style.css
+++ b/weatherApp/css/style.css
@@ -43,10 +43,20 @@ body {
 
 .temp span {
     position: absolute;
-    top: 70px;
+    top: 5px;
     right: 0px;
     z-index: 100;
     text-shadow: 0px 0px 16px white;
+}
+
+#cond {
+    position: absolute;
+    top: 65px;
+    font-weight: bold;
+    right: 20px;
+    z-index: 100;
+    text-shadow: 0px 0px 16px white;
+    font-size: 16px;
 }
 
 .temp .WeatherIcons {
@@ -55,7 +65,7 @@ body {
     top: 10px;
     right: 50px;
     text-shadow: 0px 0px 16px white;
-    z-index: 500;
+    z-index: 50;
 }
 
 .temp em {
