--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,32 @@
+$color-purple: #31278a;
+$color-white: #fff;
+$white-shadow: rgba(255, 255, 255, .18);
+$transparent: rgba(255, 255, 255, .0001);
+
 .container-fluid {
-  background: red;
+  background: $color-purple;
   height: 100vh;
   width: 100vw;
+}
+
+.card-wrapper {
+  height: 100vh;
+  // box-shadow: 0 5px 13px 0 $white-shadow;
+  overflow: hidden;
+  position: relative;
+}
+
+.info-card {
+  background: $color-white;
+  border-radius: .2rem;
+  margin: 0 auto;
+  padding: 1rem 1.5rem;
+  position: absolute;
+  transition: transform 3s ease-in-out, background 1.5s;
+  width: 95%;
+}
+
+.next-slide {
+  background: $transparent;
+  transform: translateX(-50rem);
 }
